      attachments.
[mms] Uniquely identify sent-mail mailboxes by identity in main folder tree
      (Request #12721).
[mms] Don't send empty text part if a message contains attachments.
[mms] Add button to allow folder tree to be rebuilt in smartmobile view.
[mms] Add option to poll mailbox for new mailbox when creating a mailbox
      (Request #13227).


------
v6.2.5
------

[mms] Fix regression when working with multiple selected messages with a POP3
      server (Bug #13759).
[mms] Only count successful compose mails when determining recipient limits
      (Bug #13751).


------
v6.2.4
------

[mms] Don't persist dynamic filter views across page reloads.
[mms] Fix message saving when using a POP3 server.
[jan] Fix JS error when using regexp characters in search string.
[mjr] Ensure we have a valid MIME part to display in thread view (Bug #13653).


------
v6.2.3
------

[mms] Fix handling authentication errors when they take place during an attempt
      to determine a mailbox's namespace.
[mms] Fix some folder display issues when not using IMAP subscriptions in
      dynamic view (Bug #13553).
[mms] Fix accessing dynamic compose page when file uploads are not available
      (Bug #13580).
[mms] Fix saving unique browser preferences for a specific backend in dynamic
      view.
[mms] Fix toggling select all checkbox in both dynamic mailbox layouts.


------
v6.2.2
------

[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
      issue with the underlying cache backend.
[mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
      is true.
[jan] Fix vCard MIME viewer.
[jan] Fix MIME viewer form actions in basic view (Bug #12677).
[mms] Don't store/retrieve message history data if the Message-ID is
      missing/invalid.
[mms] Fix resuming draft from mailbox page in basic view.
[mms] Fix displaying Virtual Trash mailbox (Bug #13418).
[mms] Fix menu actions on the minimal message page (Bug #13440).