@@ -1448,6 +1448,10 @@
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
+   <package>
+    <name>File_ASN1</name>
+    <channel>phpseclib.sourceforge.net</channel>
+   </package>
    <extension>
     <name>dom</name>
    </extension>
@@ -3709,6 +3713,7 @@
    <date>2014-12-03</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix parsing broken S/MIME messages that don&apos;t include the smime-type content-type parameter (Request #13661).
 * [mms] Fix regression when working with multiple selected messages with a POP3 server (Bug #13759).
 * [mms] Only count successful compose mails when determining recipient limits (Bug #13751).
    </notes>
