@@ -48,6 +48,8 @@ v7.0.0-git
 v6.2.5
 ------
 
+[mms] Fix parsing broken S/MIME messages that don't include the smime-type
+      content-type parameter (Request #13661).
 [mms] Fix regression when working with multiple selected messages with a POP3
       server (Bug #13759).
 [mms] Only count successful compose mails when determining recipient limits
